snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/maven-metadata.xml.md5
85a134c6366dc24357bfc6976f98dac3